# quicklet-v2

./: flashcards.html  index.html  main.py  pyproject.toml  scrip.js  styles.css
